--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6",
+    "vee-validate": "^2.0.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuetify": "^0.17.6"
