--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "moment": "^2.20.1",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6",
+    "uuid": "^3.2.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuelidate": "^0.6.1",
