--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "datejs": "^1.0.0-rc3",
     "moment": "^2.20.1",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6",
     "uuid": "^3.2.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "vue-simple-calendar": "^2.0.0",
     "vuelidate": "^0.6.1",
     "vuetify": "^0.17.6"
   },
