--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "actioncable": "^5.1.5",
     "axios": "^0.17.1",
     "babel-preset-es2015": "^6.24.1",
     "datejs": "^1.0.0-rc3",
