--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "uuid": "^3.2.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
+    "vue-stripe": "^0.1.52",
     "vue2-timepicker": "^0.1.4",
     "vuelidate": "^0.6.1",
     "vuetify": "^0.17.6"
